@@ -6,7 +6,7 @@
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -103,8 +103,8 @@ public class RuleFactoryTest {
             final double[] p = new double[order];
             final double[] w = new double[order];
             for (int i = 0; i < order; i++) {
-                p[i] = new Double(i);
-                w[i] = new Double(i);
+                p[i] = Double.valueOf(i);
+                w[i] = Double.valueOf(i);
             }
             return new Pair<>(p, w);
         }
